# chip_image_detect

./: .gitignore  CMakeLists.txt  readme.md  test.sh  我的毕业论文.docx
include/core/: DefectAlgorithm.h  PixelProcessor.h  ProcessingThread.h
include/gui/: mainwindow.h
src/: main.cpp
src/core/: DefectAlgorithm.cpp  PixelProcessor.cpp  ProcessingThread.cpp
src/gui/: mainwindow.cpp
